# Advent2025

./: .gitignore  CMakeLists.txt  README.md
src/: advent.cpp  advent.h  main.cpp
